added more tests

--- a/src/html/templates/simple.html
+++ b/src/html/templates/simple.html
@@ -15,4 +15,5 @@
       document.getElementById('{{ locale }}-plural-{{ count }}').textContent = g.ngettext('singular-string', 'plural-string', {{ count }});
     {% endfor %}
   {% endfor %}
+  window.GETTEXT_TESTS_FINISHED = true;
 </script>
