--- a/src/html/templates/ajax.html
+++ b/src/html/templates/ajax.html
@@ -6,6 +6,16 @@
   {% endfor %}
 {% endfor %}
 <script>
+  window.onerror = function(message, source, lineno, colno, error) {
+    window.GETTEXT_TESTS_FINISHED = -1;
+    window.GETTEXT_ERROR = {
+      message: message,
+      source: source,
+      lineno: lineno,
+      colno: colno,
+      error: error
+    };
+  };
   function load(locale, cb) {
     var url = '/locale/' + locale + '/LC_MESSAGES/messages.mo.json';
     var xhr = new XMLHttpRequest();
