moved stuff around, build two different bundles

--- a/src/html/templates/ajax.html
+++ b/src/html/templates/ajax.html
@@ -1,4 +1,4 @@
-<script src="/dist/gettext.js"></script>
+<script src="/dist/gettext.iife.js"></script>
 {% for locale in ['null', 'en', 'ja'] %}
   <span id="{{ locale }}-simple"></span>
   {% for count in [1, 2] %}
