--- a/src/html/templates/simple.html
+++ b/src/html/templates/simple.html
@@ -1,4 +1,4 @@
-<script src="/dist/gettext.js"></script>
+<script src="/dist/gettext.iife.js"></script>
 <script src="/locale/en/LC_MESSAGES/messages.mo.js"></script>
 <script src="/locale/ja/LC_MESSAGES/messages.mo.js"></script>
 {% for locale in ['null', 'en', 'ja'] %}
